--- a/teddycloud/config.yaml
+++ b/teddycloud/config.yaml
@@ -1,5 +1,5 @@
 name: TeddyCloud
-version: 0.6.4
+version: edge
 slug: teddycloud
 description: An alternative server for your Toniebox
 url: https://github.com/usimd/addon-teddycloud
